syntax = "proto3";

package behavior;

option go_package = "github.com/havoc-io/mutagen/pkg/filesystem/behavior";

// ProbeMode specifies the mode for filesystem probing.
enum ProbeMode {
    // ProbeMode_ProbeModeDefault represents an unspecified probe mode. It
    // should be converted to one of the following values based on the desired
    // default behavior.
    ProbeModeDefault = 0;
    // ProbeMode_ProbeModeProbe specifies that filesystem behavior should be
    // determined using temporary files or, if possible, a "fast-path" mechanism
    // (such as filesystem format detection) that provides quick but certain
    // determination of filesystem behavior.
    ProbeModeProbe = 1;
    // ProbeMode_ProbeModeAssume specifies that filesystem behavior should be
    // assumed based on the underlying platform. This is not as accurate as
    // ProbeMode_ProbeModeProbe.
    ProbeModeAssume = 2;
}
