syntax = "proto3";

package sync;

option go_package = "github.com/havoc-io/mutagen/pkg/sync";

import "google/protobuf/timestamp.proto";

// CacheEntry represents cache data for a file on disk.
message CacheEntry {
    // Mode stores the value of the POSIX mode bits (i.e. the st_mode member of
    // struct stat). On Windows, this value is computed using the Go os.FileMode
    // value retrieved through the os package (for which bit definitions are
    // guaranteed to be stable).
    uint32 mode = 1;

    // ModificationTime is the cached modification time.
    google.protobuf.Timestamp modificationTime = 2;

    // Size is the cached size.
    uint64 size = 3;

    // FileID is the file identifier. On POSIX systems it is the inode number.
    // On Windows it is currently 0.
    uint64 fileID = 4;

    // Fields 5-8 are reserved for future common metadata.

    // Digest is the cached digest for file entries.
    bytes digest = 9;
}

// Cache provides a store for file metadata and digets to allow for efficient
// rescans.
message Cache {
    // Entries is a map from scan path to cache entry.
    map<string, CacheEntry> entries = 1;
}
